# ome-types

./: .gitattributes  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.md  changes.md  compare.py  convert.py  coverage.yml  gen.py  hatch_build.py  mkdocs.yml  mypy.ini  ome_types_v2.json  original.xml  pyproject.toml  requirements.txt  rewritten.xml  setup.cfg  setup.py  tox.ini  x.py
.github/scripts/: download_aics_test_data.py
.github/workflows/: build.yml  built_branch.yml  release.yml  test.yaml  test.yml  test_aics.yml  test_dependents.yml
docs/: _my_sigs.py  index.md  migration.md  requirements.txt  usage.md
docs/API/: base_type.md  ome_types.md  ome_types.model.md  ome_types.simple_types.md
docs/scripts/: ome_types_v1.json  write_v2_changes.py
docs/source/: api.rst  conf.py  index.rst  ome_types.model.rst  ome_types.model.simple_types.rst  ome_types.rst  usage.rst
docs/source/_templates/: custom-class-template.rst
docs/styles/: extra.css
ome_types/: __init__.py  _pydantic_compat.py  ome-2016-06.xsd  units.py  widget.py
ome_types/_autogenerated/ome_2016_06/: __init__.py  affine_transform.py  annotation.py  annotation_ref.py  arc.py  arc_type.py  basic_annotation.py  bin_data.py  bin_data_compression.py  binary_file.py  binning.py  boolean_annotation.py  channel.py  channel_acquisition_mode.py  channel_contrast_method.py  channel_illumination_type.py  channel_ref.py  comment_annotation.py  dataset.py  dataset_ref.py  detector.py  detector_settings.py  detector_type.py  dichroic.py  dichroic_ref.py  double_annotation.py  ellipse.py  experiment.py  experiment_ref.py  experiment_value.py  experimenter.py  experimenter_group.py  experimenter_group_ref.py  experimenter_ref.py  external.py  external_compression.py  filament.py  filament_type.py  file_annotation.py  filter.py  (+92 more)
ome_types/_mixins/: _base_type.py  _collections.py  _instrument.py  _kinded.py  _map_mixin.py  _util.py
ome_types/model/: __init__.py  _color.py  simple_types.py
omelite/: __init__.py  autogen.py  autogen1.py  autogen2.py  channel.py  dataset.py  experimenter.py  image.py  schema.py  units.py
omelite/_tests/: bad.xml  ome.xml  test_autogen.py
omelite/autogen/: __init__.py  __main__.py  attribute.py  component.py  element.py  model.py  schema.py  type.py  util.py
omelite/model/: __init__.py  channel.py  experimenter.py  image.py  plane.py  stagelabel.py
omelite/schema/: __init__.py
scripts/: ome_autogen.py
src/: ome_autogen.py  ome_autogen2.py
src/ome_autogen/: __main__.py  _class_type.py  _config.py  _generator.py  _transformer.py  _util.py  generator.py  main.py  overrides.py  transformer.py
src/ome_autogen/templates/: class.jinja2  docstrings.numpy.jinja2  enum.jinja2
src/ome_types/: __init__.py  _base_type.py  _constants.py  _convenience.py  _conversion.py  _from_arrays.py  _lxml.py  _napari_plugin.py  _pydantic_compat.py  _units.py  _xmlschema.py  bioformats.py  dataclasses.py  etree_fixes.py  fixes.py  napari.yaml  ome-2016-06.xsd  schema.py  units.py  util.py  validation.py  widget.py  widgets.py
src/ome_types/_base_models/: _base_model.py
src/ome_types/_mixins/: _base_type.py  _bin_data.py  _collections.py  _ids.py  _instrument.py  _kinded.py  _map_mixin.py  _ome.py  _pixels.py  _reference.py  _structured_annotations.py  _validators.py
src/ome_types/_ome_2016_06/: __init__.py  annotation.py  arc.py  binary_file.py  boolean_annotation.py  channel.py  channel_ref.py  comment_annotation.py  dataset.py  detector.py  double_annotation.py  experimenter_group_ref.py  experimenter_ref.py  filament.py  file_annotation.py  filter.py  filter_ref.py  filter_set.py  filter_set_ref.py  folder.py  folder_ref.py  imaging_environment.py  label.py  laser.py  leader.py  light_emitting_diode.py  light_path.py  light_source.py  light_source_group.py  light_source_settings.py  list_annotation.py  long_annotation.py  manufacturer_spec.py  map.py  map_annotation.py  numeric_annotation.py  ome.py  pixels.py  plane.py  plate_acquisition.py  (+17 more)
src/ome_types/_vendor/: __init__.py  _pydantic_color_v1.py  _pydantic_color_v2.py
src/ome_types/model/: __init__.py  _color.py  _converters.py  _roi_union.py  _shape_union.py  _structured_annotations.py  _user_sequence.py  modulo.py  ome.py  simple_types.py
src/ome_types/transforms/: 2008-09-to-2009-09.xsl
src/ome_types2/: __init__.py  _conversion.py
src/ome_types2/_mixins/: _base_type.py  _instrument.py  _reference.py
src/ome_types2/model/: __init__.py  _base_type.py  _mixins.py
src/xsdata_pydantic_basemodel/: __init__.py  _pydantic_compat.py  bindings.py  compat.py  config.py  generator.py  pydantic_compat.py
src/xsdata_pydantic_basemodel/hooks/: class_type.py
testing/: conftest.py  test_autogen.py  test_bioformats.py  test_invalid_schema.py  test_model.py  test_units.py  util.py
testing/data/: bad_xml_annotation.ome.xml  ome.tiff  ome_ns.ome.xml  shape-union.ome.xml  tubhiswt.ome.xml
tests/: conftest.py  test_autogen.py  test_codspeed.py  test_from_array.py  test_from_xml.py  test_ids.py  test_invalid_schema.py  test_model.py  test_names.py  test_omero_cli.py  test_paquo.py  test_rois.py  test_serialization.py  test_thing.py  test_transforms.py  test_units.py  test_validation.py  test_widget.py  test_xml_parsing.py
tests/data/: FLIM-ModuloAlongC.ome.xml  FLIM-ModuloAlongT-TSCPC.ome.xml  LAMBDA-ModuloAlongZ-ModuloAlongT.ome.xml  MMStack.ome.xml  OverViewScan.ome.xml  OverViewScan2-aics.ome.xml  ROI.ome.xml  SPIM-ModuloAlongZ.ome.xml  modulo.ome.xml  old_model.json  ome_ns.ome.xml  seq0000xy01c1.ome.xml  small.ome.xml  timestampannotation.ome.xml  transfer.ome.xml
tests/v1/: test_invalid_schema.py  test_model.py  test_widget.py
tests/v2/: test_from_xml.py  test_model_2.py  test_names.py  test_units.py  test_units_2.py
typesafety/: test_type_inits.yml
xsdata_pydantic_basemodel/: compat.py  generator.py  pydantic_compat.py
xsdata_pydantic_basemodel/hooks/: cli.py
xsdata_test/: .xsdata.xml  gen.py  instance.xml  schema.xsd
(+81 files in other folders)
