[metadata]
license_file = LICENSE
license = MIT
name = ome-types
url = https://github.com/tlambert03/ome-types
author = Talley Lambert
author_email = talley.lambert@gmail.com
description = Python dataclasses for the OME data model
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages = find:
; py_modules = ome_autogen
include_package_data = true
python_requires = >=3.7
install_requires =
    pydantic[email]>=1.0
    xmlschema>=1.0.16
    Pint>=0.15

[options.package_data]
* = *.xsd

[options.extras_require]
autogen = isort<5.0; black; autoflake

[options.packages.find]
where=src

[flake8]
ignore = W503, C901, E501
max-line-length = 88

[mypy]
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = True
ignore_missing_imports = True
files = src
disallow_untyped_defs = True

[tox:tox]
envlist = py{37,38}
toxworkdir=/tmp/.tox
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38, mypy, flake8

[testenv]
passenv = CI GITHUB_ACTIONS CODECOV_TOKEN
deps =
    pytest
    pytest-cov
    codecov
commands =
    pytest -v --cov-report=xml --cov=ome_types --basetemp={envtmpdir} {posargs}
    codecov -t $CODECOV_TOKEN

[testenv:mypy]
deps = mypy
commands = mypy

[testenv:lint]
deps = flake8
commands = flake8
